--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,18 +1,402 @@
-@import "fonts.css";
+/*
+ * What follows is the result of much research on cross-browser styling.
+ * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
+ * Kroc Camen, and the H5BP dev community and team.
+ */
+/* ==========================================================================
+   Base styles: opinionated defaults
+   ========================================================================== */
+@import url(fonts.css);
+html {
+  color: #222;
+  font-size: 1em;
+  line-height: 1.4; }
 
-body {
-  background: #ec008c;
-  color: #fff;
-}
+/*
+ * Remove text-shadow in selection highlight:
+ * https://twitter.com/miketaylr/status/12228805301
+ *
+ * These selection rule sets have to be separate.
+ * Customize the background color to match your design.
+ */
+::selection {
+  background: #b3d4fc;
+  text-shadow: none; }
 
-h1 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+/*
+ * A better looking default horizontal rule
+ */
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0; }
+
+/*
+ * Remove the gap between audio, canvas, iframes,
+ * images, videos and the bottom of their containers:
+ * https://github.com/h5bp/html5-boilerplate/issues/440
+ */
+audio,
+canvas,
+iframe,
+img,
+svg,
+video {
+  vertical-align: middle; }
+
+/*
+ * Remove default fieldset styles.
+ */
+fieldset {
+  border: 0;
   margin: 0;
-  font: 20vmin/1 HUGEAvantGardeBold;
-  letter-spacing: -0.06em;
-  text-align: center;
-}
+  padding: 0; }
+
+/*
+ * Allow only vertical resizing of textareas.
+ */
+textarea {
+  resize: vertical; }
+
+/* ==========================================================================
+   Browser Upgrade Prompt
+   ========================================================================== */
+.browserupgrade {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0; }
+
+/* ==========================================================================
+   Author's custom styles
+   ========================================================================== */
+/* ==========================================================================
+   Helper classes
+   ========================================================================== */
+/*
+ * Hide visually and from screen readers
+ */
+.hidden {
+  display: none !important; }
+
+/*
+ * Hide only visually, but have it available for screen readers:
+ * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+ */
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px; }
+
+/*
+ * Extends the .visuallyhidden class to allow the element
+ * to be focusable when navigated to via the keyboard:
+ * https://www.drupal.org/node/897638
+ */
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus {
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  width: auto; }
+
+/*
+ * Hide visually and from screen readers, but maintain layout
+ */
+.invisible {
+  visibility: hidden; }
+
+/*
+ * Clearfix: contain floats
+ *
+ * For modern browsers
+ * 1. The space content is one way to avoid an Opera bug when the
+ *    `contenteditable` attribute is included anywhere else in the document.
+ *    Otherwise it causes space to appear at the top and bottom of elements
+ *    that receive the `clearfix` class.
+ * 2. The use of `table` rather than `block` is only necessary if using
+ *    `:before` to contain the top-margins of child elements.
+ */
+.clearfix:before,
+.clearfix:after {
+  content: " ";
+  /* 1 */
+  display: table;
+  /* 2 */ }
+
+.clearfix:after {
+  clear: both; }
+
+/* ==========================================================================
+   EXAMPLE Media Queries for Responsive Design.
+   These examples override the primary ('mobile first') styles.
+   Modify as content requires.
+   ========================================================================== */
+@media only screen and (min-width: 35em) {
+  /* Style adjustments for viewports that meet the condition */ }
+@media print, (min-resolution: 1.25dppx), (min-resolution: 120dpi) {
+  /* Style adjustments for high resolution devices */ }
+/* ==========================================================================
+   Print styles.
+   Inlined to avoid the additional HTTP request:
+   http://www.phpied.com/delay-loading-your-print-css/
+   ========================================================================== */
+@media print {
+  *,
+  *:before,
+  *:after,
+  *:first-letter,
+  *:first-line {
+    background: transparent !important;
+    color: #000 !important;
+    /* Black prints faster:
+       http://www.sanbeiji.com/archives/953 */
+    box-shadow: none !important;
+    text-shadow: none !important; }
+
+  a,
+  a:visited {
+    text-decoration: underline; }
+
+  a[href]:after {
+    content: " (" attr(href) ")"; }
+
+  abbr[title]:after {
+    content: " (" attr(title) ")"; }
+
+  /*
+   * Don't show links that are fragment identifiers,
+   * or use the `javascript:` pseudo protocol
+   */
+  a[href^="#"]:after,
+  a[href^="javascript:"]:after {
+    content: ""; }
+
+  pre,
+  blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid; }
+
+  /*
+   * Printing Tables:
+   * http://css-discuss.incutio.com/wiki/Printing_Tables
+   */
+  thead {
+    display: table-header-group; }
+
+  tr,
+  img {
+    page-break-inside: avoid; }
+
+  img {
+    max-width: 100% !important; }
+
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3; }
+
+  h2,
+  h3 {
+    page-break-after: avoid; } }
+body {
+  margin: 0;
+  font-family: "Galaxie", sans-serif; }
+
+a {
+  text-decoration: none; }
+
+.logo-wrapper {
+  background-color: #ec008c; }
+
+.img-logo {
+  width: 60px; }
+
+.logo {
+  padding: 24px;
+  display: block; }
+
+.navigation {
+  background: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  position: absolute;
+  height: 100%; }
+  .navigation .nav-list-wrapper {
+    position: absolute;
+    background: #fff;
+    height: 100%;
+    width: 80%;
+    overflow: hidden;
+    padding-top: 12px;
+    box-sizing: border-box; }
+  .navigation .navigation-list {
+    padding-left: 0;
+    margin: 0;
+    padding-bottom: 48px; }
+    .navigation .navigation-list > li {
+      list-style: none;
+      position: relative; }
+      .navigation .navigation-list > li .nav-item {
+        font-family: "HUGEAvantGardeBold", sans-serif;
+        font-size: 21px;
+        line-height: 48px;
+        padding: 0 24px;
+        display: block;
+        height: 48px;
+        color: #000; }
+        .navigation .navigation-list > li .nav-item:hover {
+          background-color: #eee; }
+      .navigation .navigation-list > li.first-level-nav:after {
+        content: "";
+        background-image: url("/images/chevron-down.svg");
+        position: absolute;
+        top: 12px;
+        right: 12px;
+        width: 24px;
+        height: 24px;
+        display: block;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: contain; }
+  .navigation .second-nav-list {
+    padding-left: 0; }
+    .navigation .second-nav-list > li {
+      list-style: none; }
+      .navigation .second-nav-list > li .sec-nav-item {
+        font-family: "Galaxie", sans-serif;
+        font-size: 16px;
+        line-height: 48px;
+        padding: 0 24px;
+        display: block;
+        height: 48px;
+        color: #000;
+        font-weight: normal; }
+        .navigation .second-nav-list > li .sec-nav-item:hover {
+          background-color: #eee;
+          color: #ec008c; }
+
+.copyright {
+  position: absolute;
+  bottom: 0;
+  left: 24px;
+  height: 48px;
+  margin-bottom: 0;
+  font-size: 12px;
+  line-height: 48px; }
+
+.main-title {
+  font-size: 44px;
+  line-height: 48px;
+  font-family: "HUGEAvantGardeBold", sans-serif; }
+
+.img-title-wrapper {
+  background-image: url("../images/background-image.jpg");
+  background-repeat: no-repeat;
+  height: 240px;
+  background-size: cover;
+  background-position: center; }
+
+.content-wrapper {
+  padding: 0 24px; }
+
+.main-paragraph {
+  text-align: justify;
+  font-size: 14px;
+  line-height: 24px; }
+
+@media (min-width: 768px) {
+  .header {
+    background-color: #ec008c;
+    height: 72px; }
+
+  .logo-wrapper {
+    background-color: transparent;
+    display: inline-block; }
+
+  .menu,
+  .second-nav-list,
+  .copyright {
+    display: none; }
+
+  .navigation {
+    position: static;
+    width: auto;
+    height: auto;
+    background-color: transparent;
+    display: inline-block;
+    vertical-align: top;
+    font-size: 0; }
+    .navigation .nav-list-wrapper {
+      display: inline-block;
+      background-color: transparent;
+      position: static;
+      width: auto;
+      height: auto;
+      padding: 0;
+      overflow: visible; }
+    .navigation .navigation-list {
+      padding-bottom: 0; }
+      .navigation .navigation-list > li {
+        display: inline-block;
+        vertical-align: top; }
+        .navigation .navigation-list > li .nav-item {
+          padding: 12px 24px;
+          line-height: 48px;
+          color: #fff; }
+          .navigation .navigation-list > li .nav-item:hover {
+            color: #ec008c; }
+        .navigation .navigation-list > li.first-level-nav {
+          position: relative; }
+          .navigation .navigation-list > li.first-level-nav:hover .second-nav-list {
+            display: block; }
+          .navigation .navigation-list > li.first-level-nav:after {
+            content: none; }
+    .navigation .second-nav-list {
+      padding-left: 0;
+      background-color: #eee;
+      position: absolute;
+      top: 72px;
+      left: 0;
+      z-index: 2; }
+
+  .main-title-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 640px;
+    margin-bottom: 60px; }
+    .main-title-wrapper .content-wrapper {
+      z-index: 1; }
+
+  .img-title-wrapper {
+    height: 640px;
+    position: absolute;
+    width: 100%;
+    z-index: 0; }
+
+  .content-wrapper {
+    max-width: 968px;
+    margin: 0 auto; }
+
+  .main-title {
+    font-size: 120px;
+    line-height: 132px;
+    text-align: center;
+    color: #fff; }
+
+  .main-paragraph {
+    font-size: 24px;
+    line-height: 36px; } }
+
+/*# sourceMappingURL=main.css.map */
