--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -210,6 +210,9 @@ textarea {
   h2,
   h3 {
     page-break-after: avoid; } }
+html {
+  overflow-y: scroll; }
+
 body {
   margin: 0;
   font-family: "Galaxie", sans-serif; }
@@ -217,21 +220,59 @@ body {
 a {
   text-decoration: none; }
 
+.header.open {
+  position: absolute;
+  width: 100%;
+  height: 100%; }
+  .header.open .menu {
+    right: 0;
+    margin-right: 0; }
+    .header.open .menu .img-close {
+      display: block; }
+    .header.open .menu .img-open {
+      display: none; }
+  .header.open .logo {
+    left: 0; }
+  .header.open .navigation {
+    width: 100%; }
+
 .logo-wrapper {
-  background-color: #ec008c; }
+  background-color: #ec008c;
+  height: 72px;
+  position: relative; }
 
 .img-logo {
   width: 60px; }
 
 .logo {
+  left: -200px;
   padding: 24px;
-  display: block; }
+  -webkit-transition: left 0.3s;
+  /* Safari */
+  transition: left 0.3s;
+  position: absolute; }
+
+.menu {
+  -webkit-transition: right 0.3s;
+  /* Safari */
+  transition: right 0.3s;
+  display: inline-block;
+  margin-right: -72px;
+  position: absolute;
+  right: 100%;
+  width: 72px; }
+  .menu .img-close {
+    display: none; }
 
 .navigation {
   background: rgba(0, 0, 0, 0.5);
-  width: 100%;
+  width: 0;
+  -webkit-transition: width 0.3s;
+  /* Safari */
+  transition: width 0.3s;
   position: absolute;
-  height: 100%; }
+  height: 100%;
+  overflow: hidden; }
   .navigation .nav-list-wrapper {
     position: absolute;
     background: #fff;
@@ -254,27 +295,46 @@ a {
         padding: 0 24px;
         display: block;
         height: 48px;
-        color: #000; }
+        color: #000;
+        -webkit-transition: background 0.3s;
+        /* Safari */
+        transition: background 0.3s; }
         .navigation .navigation-list > li .nav-item:hover {
           background-color: #eee; }
         .navigation .navigation-list > li .nav-item.loading {
           font-family: "Galaxie", sans-serif; }
           .navigation .navigation-list > li .nav-item.loading:hover {
             background-color: transparent; }
+      .navigation .navigation-list > li.first-level-nav.open .second-nav-list {
+        height: auto; }
+      .navigation .navigation-list > li.first-level-nav.open:after {
+        -ms-transform: rotate(180deg);
+        /* IE 9 */
+        -webkit-transform: rotate(180deg);
+        /* Safari */
+        transform: rotate(180deg); }
       .navigation .navigation-list > li.first-level-nav:after {
-        content: "";
+        -webkit-transition: transform 0.3s;
+        /* Safari */
+        transition: transform 0.3s;
         background-image: url("/images/chevron-down.svg");
-        position: absolute;
-        top: 12px;
-        right: 12px;
-        width: 24px;
-        height: 24px;
-        display: block;
-        background-repeat: no-repeat;
         background-position: center center;
-        background-size: contain; }
+        background-repeat: no-repeat;
+        background-size: contain;
+        content: "";
+        display: block;
+        height: 24px;
+        position: absolute;
+        right: 12px;
+        top: 12px;
+        width: 24px; }
   .navigation .second-nav-list {
-    padding-left: 0; }
+    padding-left: 0;
+    height: 0;
+    -webkit-transition: height 0.3s;
+    /* Safari */
+    transition: height 0.3s;
+    overflow: hidden; }
     .navigation .second-nav-list > li {
       list-style: none; }
       .navigation .second-nav-list > li .sec-nav-item {
@@ -286,7 +346,13 @@ a {
         height: 48px;
         color: #000;
         font-weight: normal;
-        white-space: nowrap; }
+        white-space: nowrap;
+        -webkit-transition: background 0.3s;
+        /* Safari */
+        transition: background 0.3s;
+        -webkit-transition: color 0.3s;
+        /* Safari */
+        transition: color 0.3s; }
         .navigation .second-nav-list > li .sec-nav-item:hover {
           background-color: #eee;
           color: #ec008c; }
@@ -327,10 +393,13 @@ a {
 
   .logo-wrapper {
     background-color: transparent;
-    display: inline-block; }
+    display: inline-block;
+    height: auto; }
+
+  .logo {
+    display: block; }
 
   .menu,
-  .second-nav-list,
   .copyright {
     display: none; }
 
@@ -341,7 +410,8 @@ a {
     background-color: transparent;
     display: inline-block;
     vertical-align: top;
-    font-size: 0; }
+    font-size: 0;
+    overflow: visible; }
     .navigation .nav-list-wrapper {
       display: inline-block;
       background-color: transparent;
@@ -358,13 +428,19 @@ a {
         .navigation .navigation-list > li .nav-item {
           padding: 12px 24px;
           line-height: 48px;
-          color: #fff; }
+          color: #fff;
+          -webkit-transition: color 0.3s;
+          /* Safari */
+          transition: color 0.3s; }
           .navigation .navigation-list > li .nav-item:hover {
             color: #ec008c; }
           .navigation .navigation-list > li .nav-item.loading:hover {
             color: #fff; }
         .navigation .navigation-list > li.first-level-nav {
           position: relative; }
+          .navigation .navigation-list > li.first-level-nav.open .nav-item {
+            color: #ec008c;
+            background-color: #eee; }
           .navigation .navigation-list > li.first-level-nav:hover .second-nav-list {
             display: block; }
           .navigation .navigation-list > li.first-level-nav:after {
