--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -13,7 +13,17 @@ $highlight-color: #ec008c; //pink
 $overlay-color: rgba(0, 0, 0, 0.5); //translucent black;
 $effect-color: #eee; //light grey
 
+//animations
+@mixin transition($attribute, $animation-duration:.3s) {
+	-webkit-transition: $attribute $animation-duration; /* Safari */
+	transition: $attribute $animation-duration;
+}
+
 //reset
+html {
+	overflow-y: scroll;
+}
+
 body {
 	margin: 0;
 	font-family: $main-font-family;
@@ -25,10 +35,38 @@ a {
 
 //header
 .header {
+	&.open {
+		position: absolute;
+	    width: 100%;
+	    height: 100%;
+
+		.menu {
+			right: 0;
+			margin-right: 0;
+
+			.img-close {
+				display: block;
+			}
+
+			.img-open {
+				display: none;
+			}
+		}
+
+		.logo {
+			left: 0;
+		}
+
+		.navigation {
+			width: 100%;
+		}
+	}
 }
 
 .logo-wrapper {
 	background-color: $highlight-color;
+	height: 72px;
+	position: relative;
 }
 
 .img-logo {
@@ -36,15 +74,37 @@ a {
 }
 
 .logo {
+	left: -200px;
 	padding: 24px;
-	display: block;
+	@include transition(left);
+	position: absolute;
+}
+
+.menu {
+	@include transition(right);
+	display: inline-block;
+	margin-right: -72px;
+	position: absolute;
+	right: 100%;
+	width: 72px;
+	// -ms-transform: translate(3px,1px); /* IE 9 */
+	//    	-webkit-transform: translate(3px,1px); /* Safari */
+	//     transform: translate(3px,1px);
+
+	.img-close {
+		display: none;
+	}
+
+	
 }
 
 .navigation {
 	background: $overlay-color;
-	width: 100%;
+	width: 0;
+	@include transition(width);
 	position: absolute;
 	height: 100%;
+	overflow: hidden;
 
 	.nav-list-wrapper {
 		position: absolute;
@@ -73,6 +133,7 @@ a {
 				display: block;
 				height: 48px;
 				color: $darkest-color;
+				@include transition(background);
 
 				&:hover {
 					background-color: $effect-color;
@@ -88,18 +149,31 @@ a {
 			}
 
 			&.first-level-nav {
+				&.open {
+					.second-nav-list {
+						height: auto;
+					}
+
+					&:after {
+						-ms-transform: rotate(180deg); /* IE 9 */
+					   	-webkit-transform: rotate(180deg); /* Safari */
+					    transform: rotate(180deg);
+					}
+				}
+
 				&:after {
-					content: "";
+					@include transition(transform); 
 					background-image: url("/images/chevron-down.svg");
-					position: absolute;
-					top: 12px;
-					right: 12px;
-					width: 24px;
-					height: 24px;
-					display: block;
-					background-repeat: no-repeat;
 					background-position: center center;
+					background-repeat: no-repeat;
 					background-size: contain;
+					content: "";
+					display: block;
+					height: 24px;
+					position: absolute;
+					right: 12px;
+					top: 12px;
+					width: 24px;
 				}
 			}
 		}
@@ -107,6 +181,9 @@ a {
 
 	.second-nav-list {
 		padding-left: 0;
+		height: 0;
+		@include transition(height);
+		overflow: hidden;
 
 		> li {
 			list-style: none;
@@ -121,6 +198,8 @@ a {
 				color: $darkest-color;
 				font-weight: normal;
 				white-space: nowrap;
+				@include transition(background);
+				@include transition(color);
 
 				&:hover {
 					background-color: $effect-color;
@@ -175,10 +254,15 @@ a {
 	.logo-wrapper {
 		background-color: transparent;
 		display: inline-block;
+		height: auto;
+	}
+
+	.logo {
+		display: block;
 	}
 
 	.menu,
-	.second-nav-list,
+	// .second-nav-list,
 	.copyright {
 		display: none;
 	}
@@ -191,6 +275,7 @@ a {
 		display: inline-block;
 		vertical-align: top;
 		font-size: 0;
+		overflow: visible;
 
 		.nav-list-wrapper {
 			display: inline-block;
@@ -213,6 +298,7 @@ a {
 					padding: 12px 24px;
 					line-height: 48px;
 					color: $lightest-color;
+					@include transition(color);
 
 					&:hover {
 						color: $highlight-color;
@@ -227,6 +313,13 @@ a {
 
 				&.first-level-nav {
 					position: relative;
+
+					&.open {
+						.nav-item {
+							color: $highlight-color;
+							background-color: $effect-color;
+						}
+					}
 
 					&:hover {
 						.second-nav-list {
@@ -248,26 +341,6 @@ a {
 			top: 72px;
 			left: 0;
 			z-index: 2;
-
-			// > li {
-			// 	list-style: none;
-
-			// 	.sec-nav-item {
-			// 		font-family: $main-font-family;
-			// 		font-size: 16px;
-			// 		line-height: 48px;
-			// 		padding: 0 24px;
-			// 		display: block;
-			// 		height: 48px;
-			// 		color: $darkest-color;
-			// 		font-weight: normal;
-
-			// 		&:hover {
-			// 			background-color: $effect-color;
-			// 			color: $highlight-color;
-			// 		}
-			// 	}
-			// }
 		}
 	}
 
