--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -220,21 +220,24 @@ body {
 a {
   text-decoration: none; }
 
-.header.open {
-  position: absolute;
-  width: 100%;
-  height: 100%; }
-  .header.open .menu {
-    right: 0;
-    margin-right: 0; }
-    .header.open .menu .img-close {
-      display: block; }
-    .header.open .menu .img-open {
-      display: none; }
-  .header.open .logo {
-    left: 0; }
-  .header.open .navigation {
+.header {
+  position: relative;
+  z-index: 3; }
+  .header.open {
+    position: absolute;
+    height: 100%;
     width: 100%; }
+    .header.open .menu {
+      right: 0;
+      margin-right: 0; }
+      .header.open .menu .img-close {
+        display: block; }
+      .header.open .menu .img-open {
+        display: none; }
+    .header.open .logo {
+      left: 0; }
+    .header.open .navigation {
+      width: 100%; }
 
 .logo-wrapper {
   background-color: #ec008c;
@@ -245,11 +248,11 @@ a {
   width: 60px; }
 
 .logo {
-  left: -200px;
-  padding: 24px;
   -webkit-transition: left 0.3s;
   /* Safari */
   transition: left 0.3s;
+  left: -200px;
+  padding: 24px;
   position: absolute; }
 
 .menu {
@@ -265,40 +268,43 @@ a {
     display: none; }
 
 .navigation {
-  background: rgba(0, 0, 0, 0.5);
-  width: 0;
   -webkit-transition: width 0.3s;
   /* Safari */
   transition: width 0.3s;
-  position: absolute;
   height: 100%;
-  overflow: hidden; }
+  overflow: hidden;
+  position: absolute;
+  width: 0; }
   .navigation .nav-list-wrapper {
-    position: absolute;
+    box-sizing: border-box;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    width: 100%; }
+  .navigation .navigation-list {
     background: #fff;
     height: 100%;
-    width: 80%;
-    overflow: hidden;
-    padding-top: 12px;
-    box-sizing: border-box; }
-  .navigation .navigation-list {
-    padding-left: 0;
     margin: 0;
-    padding-bottom: 48px; }
+    padding-bottom: 48px;
+    padding-left: 0;
+    padding-top: 12px;
+    position: absolute;
+    width: 80%;
+    z-index: 3; }
     .navigation .navigation-list > li {
       list-style: none;
       position: relative; }
       .navigation .navigation-list > li .nav-item {
-        font-family: "HUGEAvantGardeBold", sans-serif;
-        font-size: 21px;
-        line-height: 48px;
-        padding: 0 24px;
-        display: block;
-        height: 48px;
-        color: #000;
         -webkit-transition: background 0.3s;
         /* Safari */
-        transition: background 0.3s; }
+        transition: background 0.3s;
+        color: #000;
+        display: block;
+        font-family: "HUGEAvantGardeBold", sans-serif;
+        font-size: 21px;
+        height: 48px;
+        line-height: 48px;
+        padding: 0 24px; }
         .navigation .navigation-list > li .nav-item:hover {
           background-color: #eee; }
         .navigation .navigation-list > li .nav-item.loading {
@@ -329,47 +335,67 @@ a {
         top: 12px;
         width: 24px; }
   .navigation .second-nav-list {
-    padding-left: 0;
-    height: 0;
     -webkit-transition: height 0.3s;
     /* Safari */
     transition: height 0.3s;
-    overflow: hidden; }
+    height: 0;
+    overflow: hidden;
+    padding-left: 0; }
     .navigation .second-nav-list > li {
       list-style: none; }
       .navigation .second-nav-list > li .sec-nav-item {
-        font-family: "Galaxie", sans-serif;
-        font-size: 16px;
-        line-height: 48px;
-        padding: 0 24px;
-        display: block;
-        height: 48px;
-        color: #000;
-        font-weight: normal;
-        white-space: nowrap;
         -webkit-transition: background 0.3s;
         /* Safari */
         transition: background 0.3s;
         -webkit-transition: color 0.3s;
         /* Safari */
-        transition: color 0.3s; }
+        transition: color 0.3s;
+        color: #000;
+        display: block;
+        font-family: "Galaxie", sans-serif;
+        font-size: 16px;
+        font-weight: normal;
+        height: 48px;
+        line-height: 48px;
+        padding: 0 24px;
+        white-space: nowrap; }
         .navigation .second-nav-list > li .sec-nav-item:hover {
           background-color: #eee;
           color: #ec008c; }
 
 .copyright {
-  position: absolute;
   bottom: 0;
-  left: 24px;
-  height: 48px;
-  margin-bottom: 0;
   font-size: 12px;
-  line-height: 48px; }
+  height: 48px;
+  left: 24px;
+  line-height: 48px;
+  margin-bottom: 0;
+  position: absolute;
+  z-index: 3; }
+
+.overlay {
+  -webkit-transition: display 0.3s;
+  /* Safari */
+  transition: display 0.3s;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  z-index: 2; }
+  .overlay.mobile.open {
+    display: block; }
+  .overlay.desktop {
+    display: none; }
+
+.section {
+  overflow: hidden;
+  position: relative; }
 
 .main-title {
+  font-family: "HUGEAvantGardeBold", sans-serif;
   font-size: 44px;
-  line-height: 48px;
-  font-family: "HUGEAvantGardeBold", sans-serif; }
+  line-height: 48px; }
 
 .img-title-wrapper {
   background-image: url("../images/background-image.jpg");
@@ -394,44 +420,53 @@ a {
   .logo-wrapper {
     background-color: transparent;
     display: inline-block;
-    height: auto; }
+    height: 72px;
+    width: 132px; }
 
   .logo {
-    display: block; }
+    display: block;
+    left: auto; }
 
   .menu,
   .copyright {
     display: none; }
 
+  .overlay.mobile.open {
+    display: none; }
+  .overlay.open.desktop {
+    display: block; }
+
   .navigation {
-    position: static;
-    width: auto;
-    height: auto;
     background-color: transparent;
     display: inline-block;
-    vertical-align: top;
     font-size: 0;
-    overflow: visible; }
+    height: auto;
+    overflow: visible;
+    position: static;
+    vertical-align: top;
+    width: auto; }
     .navigation .nav-list-wrapper {
-      display: inline-block;
       background-color: transparent;
-      position: static;
-      width: auto;
+      display: inline-block;
       height: auto;
+      overflow: visible;
       padding: 0;
-      overflow: visible; }
+      position: static;
+      width: auto; }
     .navigation .navigation-list {
-      padding-bottom: 0; }
+      padding: 0;
+      background-color: transparent; }
       .navigation .navigation-list > li {
         display: inline-block;
         vertical-align: top; }
         .navigation .navigation-list > li .nav-item {
-          padding: 12px 24px;
-          line-height: 48px;
-          color: #fff;
           -webkit-transition: color 0.3s;
           /* Safari */
-          transition: color 0.3s; }
+          transition: color 0.3s;
+          color: #fff;
+          line-height: 52px;
+          padding: 12px 17px;
+          font-size: 15px; }
           .navigation .navigation-list > li .nav-item:hover {
             color: #ec008c; }
           .navigation .navigation-list > li .nav-item.loading:hover {
@@ -446,18 +481,18 @@ a {
           .navigation .navigation-list > li.first-level-nav:after {
             content: none; }
     .navigation .second-nav-list {
-      padding-left: 0;
       background-color: #eee;
+      left: 0;
+      padding-left: 0;
       position: absolute;
       top: 72px;
-      left: 0;
       z-index: 2; }
 
   .main-title-wrapper {
-    display: flex;
     align-items: center;
-    justify-content: center;
+    display: flex;
     height: 640px;
+    justify-content: center;
     margin-bottom: 60px; }
     .main-title-wrapper .content-wrapper {
       z-index: 1; }
@@ -469,17 +504,21 @@ a {
     z-index: 0; }
 
   .content-wrapper {
-    max-width: 968px;
-    margin: 0 auto; }
+    margin: 0 auto;
+    max-width: 968px; }
 
   .main-title {
+    color: #fff;
     font-size: 120px;
     line-height: 132px;
-    text-align: center;
-    color: #fff; }
+    text-align: center; }
 
   .main-paragraph {
     font-size: 24px;
     line-height: 36px; } }
+@media (min-width: 1040px) {
+  .navigation .navigation-list > li .nav-item {
+    font-size: 21px;
+    padding: 12px 24px; } }
 
 /*# sourceMappingURL=main.css.map */
